compiler/testData/diagnostics/tests/redeclarations/PackageRedeclaredByNestedClass.fir.kt
// FILE: a.kt
package <!PACKAGE_CONFLICTS_WITH_CLASSIFIER!>a.b<!>

// FILE: b.kt
class a {
    class b
}
